<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:visibility="visible"
        app:title="@string/events_header">

        <SwitchPreference
            android:id="@+id/disable_past"
            android:defaultValue="false"
            android:key="disable_past_events"
            android:summary="@string/disable_past_events_desc"
            android:title="@string/disable_past_events_title" />
        <SwitchPreference
            android:id="@+id/cal_detail_pref"
            android:defaultValue="false"
            android:key="cal_detail"
            android:title="@string/detailed_calendarAdd"
            app:summaryOff="@string/detailed_calendarAdd_off"
            app:summaryOn="@string/detailed_calendarAdd_on" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/reminders_header">

        <SwitchPreferenceCompat
            android:id="@+id/allow_reminder_pref"
            app:key="reminders"
            app:title="@string/allow_reminders" />

        <MultiSelectListPreference
            android:id="@+id/reminderTimes_choices"
            android:dependency="reminders"
            android:entries="@array/reminder_entries"
            android:entryValues="@array/reminder_values"
            android:key="reminder_times"
            android:title="@string/reminder_time_title" />

    </PreferenceCategory>

</PreferenceScreen>