<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="#00FFFFFF"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:strokeColor="@color/primaryColor"
    app:strokeWidth="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/addMsg_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/add_message"
            android:textAlignment="center"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subject_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/subject_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject_text_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/body_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/body_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/body_text_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minHeight="100dp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/cancel_bttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_bttn"
                app:layout_constraintEnd_toStartOf="@+id/send_bttn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/send_bttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="112dp"
                android:text="@string/send_bttn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancel_bttn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>