<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage_bio"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize25Percent"
        app:strokeColor="@color/primaryColor"
        app:strokeWidth="2sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_bio_fname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/bio_fName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage_bio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fname_editText"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_bio_lname_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/bio_lName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_bio_fname_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lname_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_bio_lname_Layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_bio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:focusable="auto"
        android:hint="@string/profile_bio_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_bio_editText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:clickable="true"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:inputType="none"
            android:longClickable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/courses_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/admindetail_courses"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_bio_layout" />

    <TextView
        android:id="@+id/courselist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courses_title3" />

    <Button
        android:id="@+id/editCourses_bttn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="#00834C4C"
        android:enabled="true"
        android:text="+ Edit Courses"
        android:textColor="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toEndOf="@+id/courses_title"
        app:layout_constraintTop_toBottomOf="@+id/profile_bio_layout" />

    <Button
        android:id="@+id/profile_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courselist" />


</androidx.constraintlayout.widget.ConstraintLayout>