<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage_bio3"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginTop="44dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize25Percent"
        app:strokeColor="@color/primaryColor"
        app:strokeWidth="2sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_bio_fname_layout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/bio_fName"
        android:longClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage_bio3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fname_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_bio_lname_Layout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/bio_lName"
        android:longClickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_bio_fname_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lname_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            android:cursorVisible="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_bio_lname_Layout" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_textview" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_bio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:clickable="false"
        android:enabled="true"
        android:focusable="false"
        android:hint="@string/profile_bio_hint"
        android:longClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_bio_editText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:clickable="false"
            android:enabled="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:inputType="textLongMessage|textMultiLine|textImeMultiLine"
            android:longClickable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/profile_save_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/bio_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_courselist" />

    <TextView
        android:id="@+id/courses_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/admindetail_courses"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_bio_layout" />

    <TextView
        android:id="@+id/admin_courselist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courses_title"
        tools:text="CSCI \nSDEV\n" />

    <Button
        android:id="@+id/editCourses_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#00834C4C"
        android:enabled="false"
        android:text="+ Edit Courses"
        android:textColor="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toEndOf="@+id/courses_title"
        app:layout_constraintTop_toBottomOf="@+id/profile_bio_layout" />

    <Button
        android:id="@+id/editbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="EDIT"
        app:icon="@drawable/ic_action_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>